--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
   <uses-permission android:name="android.permission.REAL_GET_TASKS"/>
   <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE"/>
+  <uses-permission android:name="android.permission.MANAGE_APP_OPS_MODES" />
   <application
     android:allowBackup="true"
     android:icon="@mipmap/app_icon"
